@@ -38,7 +38,7 @@ outNames = {};
 h = waitbar(0,'Please wait...');
 for i = 1:numSbj
     file = objs{i};
-    [path, name, ext, ver] = fileparts(file);
+    [path, name, ext] = fileparts(file);
     
     switch method
         case 'ExpLSF'
