@@ -11,7 +11,7 @@
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2013 University of Oxford
-% Version: 0.1.2
+% Version: 0.1.3
 % $Rev$
 % $Date$
 %
@@ -56,8 +56,8 @@ toolboxes = { ...
     ['ThirdPartyToolbox' filesep 'iso2meshToolbox'], ...
     ['ThirdPartyToolbox' filesep 'iso2meshToolbox/bin'], ...
     ['ThirdPartyToolbox' filesep 'niftiToolbox'], ...
-    ['ThirdPartyToolbox' filesep 'SpharmToolbox'], ...
-    ['ThirdPartyToolbox' filesep 'SpharmToolbox/C_sources'], ...
+    ['ThirdPartyToolbox' filesep 'SpharmToolbox/code'], ...
+    ['ThirdPartyToolbox' filesep 'SpharmToolbox/code/C_sources'], ...
     ['ThirdPartyToolbox' filesep 'sphsplineToolbox'], ...
     ['ThirdPartyToolbox' filesep 'TiffreadToolbox'] ...
     };
